# logger-from-scratch

./: CMakeLists.txt  ConsoleStream.cpp  ConsoleStream.h  FileStream.cpp  FileStream.h  LogStream.h  Logger.cpp  Logger.h  README.md  console_stream.cpp  console_stream.hpp  file_stream.cpp  file_stream.hpp  log_stream.hpp  logger.cpp  logger.hpp  main.cpp
